@@ -17,7 +17,6 @@ package net.hasor.mvc.support;
 import net.hasor.core.AppContext;
 import net.hasor.core.AppContextAware;
 import net.hasor.core.BindInfo;
-import net.hasor.core.EventListener;
 import net.hasor.mvc.WebCall;
 import net.hasor.mvc.WebCallInterceptor;
 /**
@@ -25,15 +24,14 @@ import net.hasor.mvc.WebCallInterceptor;
  * @version 2015年6月28日
  * @author 赵永春(zyc@hasor.net)
  */
-class WebCallInterceptorDefine implements WebCallInterceptor, EventListener {
+class WebCallInterceptorDefine implements WebCallInterceptor, AppContextAware {
     private WebCallInterceptor           callInterceptor;
     private BindInfo<WebCallInterceptor> targetBindInfo;
     //
     public WebCallInterceptorDefine(BindInfo<WebCallInterceptor> targetBindInfo) {
         this.targetBindInfo = targetBindInfo;
     }
-    public void onEvent(String event, Object[] params) throws Throwable {
-        AppContext appContext = (AppContext) params[0];
+    public void setAppContext(AppContext appContext) {
         this.callInterceptor = appContext.getInstance(this.targetBindInfo);
         if (this.callInterceptor instanceof AppContextAware) {
             ((AppContextAware) this.callInterceptor).setAppContext(appContext);
